<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/frame_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/list_leftside"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/audio_FLTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/audio_Title"
                 />

            <CheckBox
                android:id="@+id/BT_FLTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/BT_Title" />

            <CheckBox
                android:id="@+id/charger_FLTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/charger_Title" />

            <CheckBox
                android:id="@+id/Gsensor_FLTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/Gsensor_Title" />
            <CheckBox
                android:id="@+id/LED_FLTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/LED_Title" />
            <CheckBox
                android:id="@+id/LD_FLTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/touchCkb_msg" />
            <CheckBox
                android:id="@+id/camera_FLTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/camera_Title" />
            <CheckBox
                android:id="@+id/Wifi_FLTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/Wifi_Title" />










        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_rightside"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/backlight_FLTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/backlight_Title" />

            <CheckBox
                android:id="@+id/button_FLTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/button_Title" />
            <CheckBox
                android:id="@+id/flashlight_FLTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/flashlight_Title" />
            <CheckBox
                android:id="@+id/HST_FLTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/HST_Title" />

            <CheckBox
                android:id="@+id/hallsensor_FLTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/Hallsensor_Title" />
            <CheckBox
                android:id="@+id/lightsensor_FLTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/LS_Title" />
            <CheckBox
                android:id="@+id/psensor_FLTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/Psensor_Title" />



            <CheckBox
                android:id="@+id/vibrator_FLTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/vibrator_Title" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60.0dip"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_about"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="30.0"
            android:onClick="showCopyright"
            android:text="@string/btn_about" />

        <Button
            android:id="@+id/btn_select_all"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="30.0"
            android:onClick="selectAll"
            android:text="@string/btn_select_all" />

        <Button
            android:id="@+id/btn_run"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="30.0"
            android:onClick="runTest"
            android:text="@string/btn_run" />

        <Button
            android:id="@+id/btn_more"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="30.0"
            android:onClick="showMore"
            android:text="@string/btn_more" />
    </LinearLayout>

</RelativeLayout>
