<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/batrundown_SubTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/batrundown_Title" />

            <CheckBox
                android:id="@+id/factoryreset_SubTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/Factory_Title" />

            <CheckBox
                android:id="@+id/agps_SubTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/agps_Title" />

            <CheckBox
                android:id="@+id/Livecall_SubTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/Livecall_Title" />

            <CheckBox
                android:id="@+id/touchCkb_msg_no_time_limit_SubTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/touchCkb_msg_no_time_limit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/device_info_SubTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/device_info_title" />

            <CheckBox
                android:id="@+id/hardware_info_SubTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/hardware_info_title" />

            <CheckBox
                android:id="@+id/Safemode_SubTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/Safemode_Title" />

            <CheckBox
                android:id="@+id/software_info_SubTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/software_ver_title" />

            <CheckBox
                android:id="@+id/NFC_SubTitle"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:text="@string/NFC_Title" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60.0dip"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_about_more"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.3"
            android:onClick="showCopyright"
            android:text="@string/btn_about" />

        <Button
            android:id="@+id/btn_run"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.3"
            android:onClick="runTest"
            android:text="@string/btn_run" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.3"
            android:onClick="showPreviousFunctionList"
            android:text="@string/btn_back" />
    </LinearLayout>

</RelativeLayout>
