<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="#ffffffff"
    android:gravity="top|center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50.0dip"

        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/app_instruct1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_instruct1"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#ffcccccc" />
    <TextView
        android:id="@+id/app_instruct2"
        android:layout_width="244.0dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="30.0dip"
        android:text="@string/app_instruct2"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#ffcccccc" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30.0dip"
        android:gravity="center"
        >
        <Button
            android:id="@+id/Button_instruct"
            android:layout_width="100.0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="20.0dip"
            android:onClick="goToTestPage"
            android:text="@string/Button_instruct" />

        <Button
            android:id="@+id/Button_Cancel"
            android:layout_width="100.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dip"
            android:onClick="closeApp"
            android:text="@string/Button_Cancel" />

    </LinearLayout>

</LinearLayout>