<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff000000" >
    <TextView
        android:id="@id/audio_Title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#ff0000ff"
        android:text="@string/audio_Title"
        android:textColor="#ffffffff" />
    <ImageView
        android:id="@+id/nearear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/audio_Title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20.0dip"
        android:src="@drawable/nearear" />
    <Button
        android:id="@+id/btn_audio_receiver_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="50.0dip"
        android:onClick="receiverTest"
        android:text="@string/btn_audio_receiver_test" />
    <TextView
        android:id="@+id/audio_Ins1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_audio_receiver_test"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50.0dip"
        android:text="@string/audio_Ins1" />



</RelativeLayout>